<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary"
    tools:context=".ui.TwoFaAuthenticationFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_back_arrow"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/enter_code_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="@id/left_guide_line"
        style="@style/Headline6.SemiBold"
        android:text="@string/enter_auth_code"
        />

    <TextView
        android:id="@+id/extra_steps_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/left_guide_line"
        app:layout_constraintEnd_toEndOf="@id/right_guide_line"
        app:layout_constraintTop_toBottomOf="@id/enter_code_title"
        style="@style/Body2"
        android:layout_marginTop="10dp"
        android:text="@string/extra_steps_label"
        />

    <TextView
        android:id="@+id/need_help"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/extra_steps_label"
        app:layout_constraintStart_toStartOf="@id/left_guide_line"
        app:layout_constraintEnd_toEndOf="@id/right_guide_line"
        style="@style/Body2"
        android:layout_marginTop="10dp"
        tools:text="@string/need_help"
        />

    <EditText
        android:id="@+id/enter_code_field"
        android:layout_width="0dp"
        android:layout_height="46dp"
        app:layout_constraintTop_toBottomOf="@id/need_help"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="@id/left_guide_line"
        app:layout_constraintEnd_toEndOf="@id/right_guide_line"
        android:background="@drawable/rounded_background"
        android:theme="@style/BlueStrokeColorWhiteBackground"
        android:inputType="number"
        style="@style/Body1"
        android:textCursorDrawable="@color/dash_blue"
        android:hint="@string/coinbase_fa_code_hint"
        android:paddingLeft="15dp"
        android:textColorHint="@color/light_steel_gray_500"
        />

    <TextView
        android:id="@+id/enter_code_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/left_guide_line"
        app:layout_constraintEnd_toEndOf="@id/right_guide_line"
        app:layout_constraintTop_toBottomOf="@id/enter_code_field"
        android:layout_marginTop="10dp"
        android:text="@string/enter_code_details"
        style="@style/Caption.DarkSteelGray700"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guide_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guide_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/bottom_card"
        style="@style/CardViewRaised.Radius15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-10dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/keyboard_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/enter_amount_keyboard_spacing"
            android:orientation="vertical">

            <View
                android:id="@+id/keyboard_header_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="@dimen/enter_amount_keyboard_spacing"
                android:visibility="gone"
                android:background="@color/divider_color"
                android:layout_marginHorizontal="@dimen/divider_margin_horizontal" />

            <org.dash.wallet.common.ui.enter_amount.NumericKeyboardView
                android:id="@+id/keyboard_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="@dimen/enter_amount_keyboard_spacing"
                app:nk_decSeparatorEnabled="true" />

            <Button
                android:id="@+id/verify_btn"
                style="@style/Button.Primary.Large.Blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:layout_marginHorizontal="15dp"
                android:enabled="false"
                android:text="@string/verify_continue" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>