<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_rounded_bg"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:paddingBottom="24dp">

        <ImageView
            android:id="@+id/coinbase_fee_info_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/blue_circle"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_coinbase_fee"
            android:padding="8dp"
            android:textColor="@color/dash_white"
            android:gravity="center"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/coinbase_fee_info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/coinbase_fee_info_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/fees_in_crypto_purchase"
            style="@style/Subtitle1"
            android:textSize="16sp"
            android:layout_marginTop="32dp"
            />

        <TextView
            android:id="@+id/coinbase_fee_info_msg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/coinbase_fee_info_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Caption.SteelGray700"
            android:layout_marginTop="5dp"
            android:textSize="12sp"
            android:text="@string/coinbase_fee_info_msg_content"
            android:layout_marginHorizontal="20dp"
            android:paddingVertical="10dp"
            android:gravity="center"
            android:lineSpacingExtra="4sp"
            />

        <TextView
            android:id="@+id/coinbase_fee_info_learn_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/coinbase_fee_info_msg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Caption.SemiBold.Blue"
            android:text="@string/learn_more"
            android:textSize="12sp"
            />

        <Button
            android:id="@+id/coinbase_fee_info_close_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/coinbase_fee_info_learn_more"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/round_corner_grey_border"
            style="@style/Button.Secondary"
            android:text="@string/close"
            android:textAllCaps="false"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
