<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_rounded_bg"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        android:padding="24dp"
        android:minWidth="280dp"
        tools:ignore="ContentDescription"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/title"
            style="@style/Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:textAlignment="gravity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/cancel_transaction"
            />

        <Button
            android:id="@+id/no_cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            style="@style/Button.Tertiary.Large.Blue"
            android:minWidth="96dp"
            android:text="@string/no_keep_it"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.5"
            android:textAllCaps="false"
            />

        <Button
            android:id="@+id/yes_cancel_button"
            style="@style/Button.Primary.Large.Blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintEnd_toEndOf="parent"
            android:minWidth="96dp"
            android:text="@string/yes_cancel"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.5"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
