<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_background"
        android:theme="@style/DialogWindowBackground"
        android:orientation="vertical">

        <View
            android:id="@+id/top_background"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/rounded_background"
            android:theme="@style/TopRoundedCornerWhiteBackground"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/white_container"
            />

        <ImageView
            android:id="@+id/top_left_arrow"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginVertical="14dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_back_arrow"
            app:layout_constraintBottom_toTopOf="@+id/header_separator"
            app:layout_constraintStart_toStartOf="@id/top_background"
            app:layout_constraintTop_toTopOf="@id/top_background" />

        <TextView
            android:id="@+id/coinbase_header_label"
            style="@style/Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coinbase"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/top_left_arrow"
            app:layout_constraintEnd_toEndOf="@id/top_background"
            app:layout_constraintStart_toStartOf="@id/top_background"
            app:layout_constraintTop_toTopOf="@id/top_left_arrow" />

        <View
            android:id="@+id/header_separator"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="@id/top_background"
            app:layout_constraintEnd_toEndOf="@id/top_background"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="@color/divider_color"
            app:layout_constraintTop_toBottomOf="@id/coinbase_header_label" />

        <ImageView
            android:id="@+id/coinbase_body_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_logo_coinbase"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/header_separator" />

        <View
            android:id="@+id/rectangle_one"
            android:layout_width="180dp"
            android:layout_height="6dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/ic_rectangle_round_corner"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/coinbase_body_label" />

        <View
            android:id="@+id/rectangle_two"
            android:layout_width="75dp"
            android:layout_height="6dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_rectangle_round_corner"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/rectangle_one" />

        <View
            android:id="@+id/rectangle_three"
            android:layout_width="75dp"
            android:layout_height="6dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/ic_rectangle_round_corner"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/rectangle_two" />

        <TextView
            android:id="@+id/debit_money_label"
            style="@style/Overline"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/debit_money"
            android:translationY="-2sp"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/rectangle_three" />

        <View
            android:id="@+id/rectangle_four"
            android:layout_width="110dp"
            android:layout_height="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/ic_rectangle_round_corner"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/debit_money_label" />

        <View
            android:id="@+id/rectangle_five"
            android:layout_width="49dp"
            android:layout_height="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_rectangle_round_corner"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/rectangle_four" />

        <TextView
            android:id="@+id/change_limit_label"
            style="@style/Caption.SemiBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:paddingVertical="2dp"
            android:text="@string/change_limit"
            android:textSize="10sp"
            android:textColor="@color/deep_blue"
            app:layout_constraintBottom_toBottomOf="@id/rectangle_five"
            app:layout_constraintStart_toEndOf="@id/rectangle_five"
            app:layout_constraintTop_toTopOf="@id/rectangle_five" />

        <ImageView
            android:id="@+id/change_limit_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:paddingBottom="4dp"
            android:src="@drawable/ic_red_curved_arrow"
            app:layout_constraintStart_toEndOf="@id/change_limit_label"
            app:layout_constraintTop_toTopOf="@id/rectangle_four" />

        <View
            android:id="@+id/white_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_background"
            android:theme="@style/BottomRoundedCornerWhiteBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/change_limit_label"
            />

        <TextView
            android:id="@+id/set_auth_limit_label"
            style="@style/Subtitle2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/white_container"
            app:layout_constraintEnd_toEndOf="@id/white_container"
            app:layout_constraintTop_toTopOf="@id/white_container"
            android:layout_marginHorizontal="20dp"
            android:paddingTop="25dp"
            android:gravity="fill_horizontal"
            android:text="@string/set_auth_limit"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/change_withdrawal_limit_label"
            style="@style/Caption.SteelGray700"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/set_auth_limit_label"
            app:layout_constraintStart_toStartOf="@id/set_auth_limit_label"
            app:layout_constraintEnd_toEndOf="@id/set_auth_limit_label"
            android:paddingTop="5dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/change_withdrawal_limit" />

        <Button
            android:id="@+id/dialog_positive_button"
            style="@style/Button.Primary.Blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/change_withdrawal_limit_label"
            android:text="@string/got_it"
            app:layout_constraintBottom_toTopOf="@id/bottom_guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/top_background"
            app:layout_constraintEnd_toEndOf="@id/top_background"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="54dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95"
            app:layout_constraintTop_toBottomOf="@id/dialog_positive_button"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>